--- a/static/css/style.css
+++ b/static/css/style.css
@@ -423,6 +423,29 @@ li, .nav-links{
     color: #485257;
 }
 
+
+#delete-item-button-detail {
+    background-color: red;
+    color: white;
+    border-width: 0.005rem;
+    border-radius: 0.5rem;
+    font-size: large;
+    padding-top: 3px;
+    padding-bottom: 10px;
+    padding-left: 12px;
+    padding-right: 10px;
+    margin-top: 30px;
+}
+
+#delete-item-button-detail:hover {
+    background-color: white;
+    border-width: 4px;
+    color: red;
+    font-weight: 700;
+    box-shadow: 0px 3px 5px rgb(0, 0, 0.2);
+    transition: 0.2s ease-in-out all;
+}
+
 /* SHOPING CART CART*/
 .item-basket {
     height: fit-content;
