--- a/templates/store/about.html
+++ b/templates/store/about.html
@@ -11,7 +11,7 @@
         <div class="cell-1">
             <h1> Do you have a Question?
             </h1>
-            <p> You can reach over phone on this nr <br>
+            <p> You can reach over phone on this nr.: <br>
                 +40 000 000001</p>
         </div>
         <div class="cell-2">
@@ -27,16 +27,16 @@
             <p>None</p>
         </div>
         <div class="cell-4">
-            <img class="pic-1" src="{% static 'images/soldering.jpeg' %}" alt="soldering">
+            <img class="pic-1" src="/media/images/soldering.jpeg" alt="soldering">
         </div>
         <div class="cell-5">
-            <img class="pic-2" src="{% static 'images/happyworkers.jpeg' %}" alt="workers">
+            <img class="pic-2" src="/media/images/happyworkers.jpeg" alt="workers">
         </div>
         <div class="cell-6">
             <h3> Return a broken item?
             </h3>
             <p>If you are dissatisfied with one of our products, <br> we would like to know.</br></p>
-            <p>Please fill out this form </p>
+            <p href="">Please fill out this form </p>
             <p>
             <address> </address>
             </p>
@@ -45,119 +45,108 @@
 </div>
 
 <style>
-    .grid {
-
+.grid {
     margin-top: 80px;
+    margin-left: 240px;
     display: grid;
-    height: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, minmax(20vmin, auto));
     gap: 1vmin;
     padding: 4vmin;
-    grid-template-columns: 50vmin 50vmin ;
-    grid-template-rows: 20vmin 20vmin 20vmin ;
     align-items: stretch;
     justify-items: center;
     background: #333;
     border-radius: 20px;
-    margin-left: 300px;
-    margin-right: 330px;
+    max-width: 800px;
   }
   
-  .grid  *{
+  .grid * {
     z-index: 99;
-    width: 100%!important;
+    width: 100%;
     border-radius: 20px;
     text-align: left;
-    
-
     background: transparent;
-  
-    --light1: lightblue;
-    --light2: rgba(211, 211, 211, 0.376);
-
   }
   
-  .grid > :nth-child(1n) {
-    background: var(--light1);
+  .grid > :nth-child(odd) {
+    background: lightblue;
+    padding: 5px 8px;
   }
-  .grid > :nth-child(2n) {
-    background: var(--light2);
-  }
-  .grid > :nth-child(3n) {
-    background: var(--light2);
-  }
-  .grid > :nth-child(4n) {
-    background: var(--light1);
-  }
-  .grid > :nth-child(5) {
-   
-    background: var(--light1);
-  }
- .grid > :nth-child(6) {
-   
-    background: var(--light2);
+  
+  .grid > :nth-child(even) {
+    background: rgba(211, 211, 211, 0.376);
+    padding: 5px 8px;
   }
   
   .grid .cell-1 h1 {
     font-size: 30px;
-    margin-bottom: 20px;
-    color: 333;
-    position: relative;
-    margin-left: 2vmin;    
-}
-.grid .cell-1 p {
-    color: 333;
-    position: relative;
-    margin-left: 2vmin;
-}
-.grid .cell-2 p {
-    color: 333;
-    position: relative;
-    margin-left: 2vmin;
-
-}
-.grid .cell-2 h1 {
+    margin-bottom: 6px;
+    color: #333;
+    padding-left: 5px;
+    padding-top: 5px;
+  }
+  
+  .grid .cell-1 p {
+    color: #333;
+    padding-left: 12px;
+    font-weight: 500;
+  }
+  
+  .grid .cell-2 p {
+    color: #d4d3d3;
+    padding-left: 12px;
+    font-weight: 500;
+    margin-bottom: 6px;
+  }
+  
+  .grid .cell-2 h1 {
     font-size: 30px;
-    margin-bottom: 20px;
-    color:lightgray;
-    text-align: left;
-    margin-left: 2vmin;
-    
- }
- .grid .cell-3 h1 {
+    margin-bottom: 6px;
+    color: rgb(235, 233, 233);
+    padding-left: 5px;
+    padding-top: 5px;
+  }
+  
+  .grid .cell-3 h1 {
     font-size: 30px;
-    margin-bottom: 20px;
-    color: lightgray;
-    text-align: left;
-    margin-left: 2vmin;
-}
-.grid .cell-3 p {
-    color: 333;
-    position: relative;
-    margin-left: 2vmin;
-
-}
- .grid .cell-6 h3 {
-
-    color: lightgray;
-    text-align: left;
-    margin-left: 2vmin;
-   
-}
-.grid .cell-6 p {
-
-    color: black;
-    text-align: left;
-    margin-left: 2vmin;
-   
-}
-
-.grid .cell-4 .pic-1 {
-    height: 100%;
-    }
-.grid .cell-5 .pic-2 {
-        height: 100%;
-        
-    }   
- 
+    margin-bottom: 6px;
+    color: #333;
+    padding-left: 5px;
+    padding-top: 5px;
+  }
+  
+  .grid .cell-3 p {
+    color: #333;
+    padding-left: 10px;
+  }
+  
+  .grid .cell-6 h3 {
+    color: #d4d3d3;
+    padding-left: 5px;
+    padding-top: 5px;
+    font-size: 30px;
+    margin-bottom: 6px;
+  }
+  
+  .grid .cell-6 p {
+    color: #d4d3d3;
+    padding-left: 12px;
+    font-weight: 500;
+    padding-bottom: 5px;
+  }
+  
+  .grid .cell-4 .pic-1,
+  .grid .cell-5 .pic-2 {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+  }
+  
+  .grid .cell-4 .pic-1:hover,
+  .grid .cell-5 .pic-2:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
+  }
+  
 </style>
 {% endblock %}
