--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -62,6 +62,10 @@
           <li class="nav-link" id="navbar-login">
             <a href="{% url "account:logout" %}">Login</a>
           {% endif %}
+          {% if user.is_staff == True %}
+          <li class="nav-link" id="navbar-login">
+            <a href="{% url "store:admin_view" %}">Admin</a>
+          {% endif %}
           </li>
         </ul>
       </div>
